<resources>
    <string name="app_name">News Article Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter search keyword</string>
    <string name="article_text">Latest News</string>
    <string name="search_filter">Filter</string>
    <string name="title_activity_fragment_search_filter">"Search Filter "</string>
    <string name="due_date">Begin Date</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="checkbox_sports">Sports</string>
    <string name="checkbox_fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="checkbox_arts">Arts</string>

    <string-array name="sortorder_array">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
    <string name="title_activity_article">Read More..</string>
    <string name="share_text">Share</string>
    <string name="title_activity_internet_error">InternetErrorActivity</string>

</resources>
