<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_begin_date"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:id="@+id/tvBeginDate"
            />

        <EditText
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:id="@+id/etBeginDate"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_sort_order"
        android:layout_below="@id/linear_layout_begin_date"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_order"
            android:id="@+id/tvSortOrder"/>

        <Spinner
            android:id="@+id/spSortOrder"
            android:spinnerMode="dropdown"
            android:layout_width="100dp"
            android:layout_height="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_news_desk_values"
        android:layout_below="@id/linear_layout_sort_order"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk_values"
            android:id="@+id/tvNewsDeskValues"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_arts"
                />

            <CheckBox android:id="@+id/cbFashion_and_Stlye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_fashion_and_style"
               />

            <CheckBox android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_sports"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_action_buttons"
        android:layout_below="@id/linear_layout_news_desk_values">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/btnCancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/btnSave" />

    </LinearLayout>
</RelativeLayout>